[gd_scene load_steps=5 format=3 uid="uid://dwj58vvihd086"]

[ext_resource type="PackedScene" uid="uid://d2csij7x06lo7" path="res://Scenes/symbols.tscn" id="1_am1v3"]
[ext_resource type="Script" uid="uid://cw7fmei1kxaxd" path="res://Scripts/block/symbols_block.gd" id="1_wiq0l"]
[ext_resource type="PackedScene" uid="uid://btdgpsl5axthc" path="res://Scenes/notifier.tscn" id="3_l5n0v"]
[ext_resource type="PackedScene" uid="uid://cy1yprb1fcpyi" path="res://Scenes/Suitcase_block.tscn" id="4_j7pu0"]

[node name="Node3D" type="Node3D" groups=["puzzle_block"]]
script = ExtResource("1_wiq0l")

[node name="Symbol_1" parent="." instance=ExtResource("1_am1v3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.038, 0.051, 0.009)

[node name="Symbol_2" parent="." instance=ExtResource("1_am1v3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.006, 0.051, 0.009)

[node name="Symbol_3" parent="." instance=ExtResource("1_am1v3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0382383, 0.0506732, -0.0351823)

[node name="Symbol_4" parent="." instance=ExtResource("1_am1v3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.006, 0.051, -0.035)

[node name="state" parent="." instance=ExtResource("3_l5n0v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.046728, 0.0582517, 0.0460316)

[node name="Node3D" parent="." instance=ExtResource("4_j7pu0")]
